[package]
name = "lnurl-client"
version = "0.1.0"
edition = "2024"
description = "CLI for LNURL channel and withdraw protocols"

[dependencies]
anyhow = "1"
cln-rpc = "0.5"
secp256k1 = "0.31"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
ureq = { version = "2", features = ["json"] }
url = "2.5"
