[package]
name = "lnurl-server"
version = "0.1.0"
edition = "2024"
description = "LNURL server for channel and withdraw protocols"

[dependencies]
axum = "0.8"
cln-rpc = "0.4"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
